<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.LoginActivity">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="150dp"
            android:layout_height="125dp"
            android:layout_marginBottom="450dp"
            android:src="@drawable/electric_car"
            android:contentDescription="@string/vehicle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="450dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/blue"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:hint="@string/email"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:counterTextColor="@color/red"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:hintTextColor="@color/blue"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="25"
                android:textCursorDrawable="@color/blue" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:hint="@string/password"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:counterTextColor="@color/red"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:hintTextColor="@color/blue"
            app:layout_constraintTop_toBottomOf="@+id/layout_email"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="15"
                android:textCursorDrawable="@color/blue" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>